--- a/CatiaViagens/Base.lproj/Main.storyboard
+++ b/CatiaViagens/Base.lproj/Main.storyboard
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -179,17 +178,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleAspectFit" misplaced="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="DIx-iv-mmt">
-                                <rect key="frame" x="0.0" y="20" width="280" height="548"/>
+                            <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="DIx-iv-mmt">
+                                <rect key="frame" x="15" y="10" width="280" height="558"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pacotes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hsk-2H-dEE">
-                                        <rect key="frame" x="0.0" y="0.0" width="280" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="280" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="TFB-if-LLi"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="Avenir-Black" family="Avenir" pointSize="17"/>
+                                        <color key="textColor" red="0.3333357871" green="0.33332890269999998" blue="0.33333355190000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="c6z-sq-tNI">
-                                        <rect key="frame" x="0.0" y="20.5" width="280" height="30"/>
+                                        <rect key="frame" x="0.0" y="36" width="280" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="cxb-GE-0NU"/>
                                         </constraints>
@@ -197,16 +199,16 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="6 pacotes encontrados" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wz8-oZ-Sct">
-                                        <rect key="frame" x="0.0" y="50.5" width="280" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
+                                        <rect key="frame" x="0.0" y="72" width="280" height="23.5"/>
+                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
+                                        <color key="textColor" red="0.3333357871" green="0.33332890269999998" blue="0.33333355190000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="x12-Rr-wOq">
-                                        <rect key="frame" x="0.0" y="71" width="280" height="477"/>
+                                        <rect key="frame" x="0.0" y="101.5" width="280" height="456.5"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="8kC-rn-QZl">
-                                            <size key="itemSize" width="135" height="160"/>
+                                            <size key="itemSize" width="70" height="160"/>
                                             <size key="estimatedItemSize" width="133" height="160"/>
                                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -216,38 +218,49 @@
                                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" reuseIdentifier="celulaPacote" id="PfL-Oc-zWx" customClass="PacoteViagensCollectionViewCell" customModule="CatiaViagens" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="0.0" width="135" height="160"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="b5u-DP-Cbo">
+                                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                                     <rect key="frame" x="0.0" y="0.0" width="135" height="160"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="14E-I2-EIH">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="14E-I2-EIH">
                                                             <rect key="frame" x="0.0" y="114" width="135" height="17"/>
-                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                             <fontDescription key="fontDescription" name="Avenir-Black" family="Avenir" pointSize="12"/>
                                                             <color key="textColor" red="0.3333357871" green="0.33332890269999998" blue="0.33333355190000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NAT-e7-sqC">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NAT-e7-sqC">
                                                             <rect key="frame" x="0.0" y="127" width="135" height="16"/>
-                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                             <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="11"/>
                                                             <color key="textColor" red="0.3333357871" green="0.33332890269999998" blue="0.33333355190000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Qh-KB-2eu">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Qh-KB-2eu">
                                                             <rect key="frame" x="0.0" y="139" width="135" height="16"/>
-                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                             <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="11"/>
                                                             <color key="textColor" red="0.3333357871" green="0.33332890269999998" blue="0.33333355190000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jdA-S9-QrS">
-                                                            <rect key="frame" x="0.0" y="0.0" width="140" height="100"/>
-                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jdA-S9-QrS">
+                                                            <rect key="frame" x="0.0" y="0.0" width="135" height="100"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="135" id="7nO-dF-vp7"/>
+                                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="155" id="gTu-ei-vAW"/>
+                                                                <constraint firstAttribute="width" relation="lessThanOrEqual" constant="155" id="ies-cg-B6p"/>
+                                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="100" id="nUr-Iv-ahW"/>
+                                                                <constraint firstAttribute="height" constant="100" id="rvp-eP-kif"/>
+                                                                <constraint firstAttribute="width" relation="lessThanOrEqual" constant="155" id="sr5-SH-QKa"/>
+                                                            </constraints>
                                                             <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="50" scale="small" weight="medium"/>
                                                         </imageView>
                                                     </subviews>
-                                                </collectionViewCellContentView>
+                                                </view>
+                                                <constraints>
+                                                    <constraint firstItem="NAT-e7-sqC" firstAttribute="top" secondItem="jdA-S9-QrS" secondAttribute="bottom" constant="27" id="8v8-S1-OaD"/>
+                                                    <constraint firstItem="14E-I2-EIH" firstAttribute="top" secondItem="jdA-S9-QrS" secondAttribute="bottom" constant="14" id="c5i-iv-Cea"/>
+                                                    <constraint firstItem="jdA-S9-QrS" firstAttribute="leading" secondItem="PfL-Oc-zWx" secondAttribute="leadingMargin" constant="-1" id="h0g-Th-Ojb"/>
+                                                    <constraint firstItem="jdA-S9-QrS" firstAttribute="centerX" secondItem="PfL-Oc-zWx" secondAttribute="centerX" id="p4E-N3-g64"/>
+                                                    <constraint firstItem="9Qh-KB-2eu" firstAttribute="top" secondItem="14E-I2-EIH" secondAttribute="bottom" constant="8" id="wsi-4X-oKh"/>
+                                                </constraints>
                                                 <size key="customSize" width="135" height="160"/>
                                                 <connections>
                                                     <outlet property="imagemViagem" destination="jdA-S9-QrS" id="QdT-j4-82x"/>
@@ -263,10 +276,10 @@
                         </subviews>
                         <color key="backgroundColor" red="0.92156862745098034" green="0.92156862745098034" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="DIx-iv-mmt" firstAttribute="top" secondItem="Ryj-h1-6OZ" secondAttribute="top" constant="20" id="Sev-DY-TxU"/>
+                            <constraint firstItem="DIx-iv-mmt" firstAttribute="top" secondItem="Ryj-h1-6OZ" secondAttribute="top" constant="10" id="Sev-DY-TxU"/>
                             <constraint firstItem="DIx-iv-mmt" firstAttribute="bottom" secondItem="Ryj-h1-6OZ" secondAttribute="bottom" id="at2-1n-1oq"/>
-                            <constraint firstItem="DIx-iv-mmt" firstAttribute="leading" secondItem="Ryj-h1-6OZ" secondAttribute="leading" multiplier="15" constant="25" id="igd-5p-p7S"/>
-                            <constraint firstAttribute="trailing" secondItem="DIx-iv-mmt" secondAttribute="trailing" constant="15" id="x2K-Ef-iao"/>
+                            <constraint firstItem="DIx-iv-mmt" firstAttribute="leading" secondItem="Ryj-h1-6OZ" secondAttribute="leading" multiplier="15" constant="15" id="igd-5p-p7S"/>
+                            <constraint firstAttribute="trailing" secondItem="DIx-iv-mmt" secondAttribute="trailing" constant="25" id="x2K-Ef-iao"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Ryj-h1-6OZ"/>
                     </view>
